# daggerheart-engine

./: .gitignore  CI_CD_SETUP.md  CI_READY_FOR_PHASE_2.md  CI_UNIFICATION.md  Cargo.toml  DEVELOPMENT.md  EXAMPLES.md  EXAMPLES_ADDED.md  IMPLEMENTATION_PLAN.md  LOCAL_CI_SETUP.md  MULTI_AGENT_RESEARCH.md  PHASE_1_COMPLETE.md  PHASE_1_REVIEW.md  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PROJECT_COMPLETE.md  QA_CLEANUP_PLAN.md  QA_REPORT_PRE_PHASE_5.md  QUICKSTART.md  README.md  RESEARCH.md  TDD_PLAN.md  crates.js  help.html  index.html  settings.html  setup-remote.sh  src-files.js
daggerheart/: all.html  enum.CharCommands.html  enum.CombatCommands.html  enum.Commands.html  enum.RollCommands.html  fn.handle_char_command.html  fn.handle_combat_command.html  fn.handle_roll_command.html  fn.list_ancestries.html  fn.list_classes.html  fn.main.html  fn.parse_ancestry.html  fn.parse_class.html  fn.parse_damage_dice.html  fn.parse_die.html  index.html  sidebar-items.js  struct.Cli.html
daggerheart_engine/: all.html  constant.VERSION.html  index.html  sidebar-items.js
docs/: API_GUIDE.md  GAME_MECHANICS.md  RESEARCH.md  SAVE_FORMAT.md  TUTORIAL.md
examples/: basic_dice.rs  character_ancestries.rs  character_attributes.rs  character_classes.rs  character_creation.rs  combat_scenario.rs  duality_dice.rs  leveling_up.rs  save_and_load.rs  weapon_damage.rs
scripts/: README.md  ci-local.sh  ci-quick.sh  ci-run.sh  install-hooks.sh
search.index/: 0014b0684b35.js  0126411d3d27.js  05815e43d6f3.js  067e8bd33a18.js  (+52 more)
(+156 files in other folders)
