[package]
name = "daggerheart-engine"
version = "0.1.0"
edition = "2021"
authors = ["Jake"]
description = "A Rust implementation of the Daggerheart TTRPG rules engine"
license = "MIT OR Apache-2.0"

[dependencies]
# Random number generation for dice
rand = "0.8"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Enum utilities
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
# Property-based testing
proptest = "1.5"

# WASM support (for future web frontend)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = true
